@@ -5,7 +5,7 @@
 # Copyright (c) 2001 Chris Lightfoot. All rights reserved.
 # Email: chris@ex-parrot.com; WWW: http://www.ex-parrot.com/~chris/
 #
-# $Id: Makefile,v 1.34 2002/07/09 17:30:42 chris Exp $
+# $Id: Makefile,v 1.35 2003/08/12 14:01:58 chris Exp $
 #
 
 #
@@ -112,3 +112,269 @@ nodepend:
 	rm -f depend Makefile.bak
 
 # DO NOT DELETE
+
+audio.o: /usr/include/string.h /usr/include/features.h
+audio.o: /usr/include/sys/cdefs.h /usr/include/gnu/stubs.h
+audio.o: /usr/lib/gcc-lib/i386-redhat-linux/egcs-2.91.66/include/stddef.h
+audio.o: driftnet.h /usr/include/sys/types.h /usr/include/bits/types.h
+audio.o: /usr/include/time.h /usr/include/endian.h /usr/include/bits/endian.h
+audio.o: /usr/include/sys/select.h /usr/include/bits/select.h
+audio.o: /usr/include/bits/sigset.h /usr/include/sys/sysmacros.h
+audio.o: /usr/include/sys/socket.h /usr/include/bits/socket.h
+audio.o: /usr/include/limits.h /usr/include/bits/posix1_lim.h
+audio.o: /usr/include/bits/local_lim.h /usr/include/linux/limits.h
+audio.o: /usr/include/bits/posix2_lim.h /usr/include/bits/sockaddr.h
+audio.o: /usr/include/asm/socket.h /usr/include/asm/sockios.h
+audio.o: /usr/include/netinet/in.h /usr/include/stdint.h
+audio.o: /usr/include/bits/wordsize.h /usr/include/bits/in.h
+audio.o: /usr/include/bits/byteswap.h /usr/include/arpa/inet.h
+audio.o: /usr/include/sys/time.h /usr/include/bits/time.h
+audio.o: /usr/include/stdio.h
+audio.o: /usr/lib/gcc-lib/i386-redhat-linux/egcs-2.91.66/include/stdarg.h
+audio.o: /usr/include/libio.h /usr/include/_G_config.h
+audio.o: /usr/include/bits/stdio_lim.h mpeghdr.h
+mpeghdr.o: /usr/include/stdio.h /usr/include/features.h
+mpeghdr.o: /usr/include/sys/cdefs.h /usr/include/gnu/stubs.h
+mpeghdr.o: /usr/lib/gcc-lib/i386-redhat-linux/egcs-2.91.66/include/stddef.h
+mpeghdr.o: /usr/lib/gcc-lib/i386-redhat-linux/egcs-2.91.66/include/stdarg.h
+mpeghdr.o: /usr/include/bits/types.h /usr/include/libio.h
+mpeghdr.o: /usr/include/_G_config.h /usr/include/bits/stdio_lim.h mpeghdr.h
+mpeghdr.o: /usr/include/stdint.h /usr/include/bits/wordsize.h
+gif.o: /usr/include/gif_lib.h img.h /usr/include/stdint.h
+gif.o: /usr/include/features.h /usr/include/sys/cdefs.h
+gif.o: /usr/include/gnu/stubs.h
+gif.o: /usr/lib/gcc-lib/i386-redhat-linux/egcs-2.91.66/include/stddef.h
+gif.o: /usr/include/bits/wordsize.h /usr/include/stdio.h
+gif.o: /usr/lib/gcc-lib/i386-redhat-linux/egcs-2.91.66/include/stdarg.h
+gif.o: /usr/include/bits/types.h /usr/include/libio.h
+gif.o: /usr/include/_G_config.h /usr/include/bits/stdio_lim.h
+img.o: /usr/include/stdio.h /usr/include/features.h /usr/include/sys/cdefs.h
+img.o: /usr/include/gnu/stubs.h
+img.o: /usr/lib/gcc-lib/i386-redhat-linux/egcs-2.91.66/include/stddef.h
+img.o: /usr/lib/gcc-lib/i386-redhat-linux/egcs-2.91.66/include/stdarg.h
+img.o: /usr/include/bits/types.h /usr/include/libio.h
+img.o: /usr/include/_G_config.h /usr/include/bits/stdio_lim.h
+img.o: /usr/include/stdlib.h /usr/include/alloca.h /usr/include/string.h
+img.o: img.h /usr/include/stdint.h /usr/include/bits/wordsize.h
+jpeg.o: /usr/include/stdio.h /usr/include/features.h /usr/include/sys/cdefs.h
+jpeg.o: /usr/include/gnu/stubs.h
+jpeg.o: /usr/lib/gcc-lib/i386-redhat-linux/egcs-2.91.66/include/stddef.h
+jpeg.o: /usr/lib/gcc-lib/i386-redhat-linux/egcs-2.91.66/include/stdarg.h
+jpeg.o: /usr/include/bits/types.h /usr/include/libio.h
+jpeg.o: /usr/include/_G_config.h /usr/include/bits/stdio_lim.h
+jpeg.o: /usr/include/stdlib.h /usr/include/alloca.h /usr/include/setjmp.h
+jpeg.o: /usr/include/bits/setjmp.h /usr/include/bits/sigset.h
+jpeg.o: /usr/include/jpeglib.h /usr/include/jconfig.h /usr/include/jmorecfg.h
+jpeg.o: img.h /usr/include/stdint.h /usr/include/bits/wordsize.h
+driftnet.o: /usr/include/assert.h /usr/include/features.h
+driftnet.o: /usr/include/sys/cdefs.h /usr/include/gnu/stubs.h
+driftnet.o: /usr/include/dirent.h /usr/include/bits/types.h
+driftnet.o: /usr/lib/gcc-lib/i386-redhat-linux/egcs-2.91.66/include/stddef.h
+driftnet.o: /usr/include/bits/dirent.h /usr/include/bits/posix1_lim.h
+driftnet.o: /usr/include/bits/local_lim.h /usr/include/linux/limits.h
+driftnet.o: /usr/include/errno.h /usr/include/bits/errno.h
+driftnet.o: /usr/include/linux/errno.h /usr/include/asm/errno.h
+driftnet.o: /usr/include/pcap/pcap.h /usr/include/sys/types.h
+driftnet.o: /usr/include/time.h /usr/include/endian.h
+driftnet.o: /usr/include/bits/endian.h /usr/include/sys/select.h
+driftnet.o: /usr/include/bits/select.h /usr/include/bits/sigset.h
+driftnet.o: /usr/include/sys/sysmacros.h /usr/include/sys/time.h
+driftnet.o: /usr/include/bits/time.h /usr/include/pcap/net/bpf.h
+driftnet.o: /usr/include/stdio.h
+driftnet.o: /usr/lib/gcc-lib/i386-redhat-linux/egcs-2.91.66/include/stdarg.h
+driftnet.o: /usr/include/libio.h /usr/include/_G_config.h
+driftnet.o: /usr/include/bits/stdio_lim.h /usr/include/netinet/in.h
+driftnet.o: /usr/include/limits.h /usr/include/bits/posix2_lim.h
+driftnet.o: /usr/include/stdint.h /usr/include/bits/wordsize.h
+driftnet.o: /usr/include/bits/socket.h /usr/include/bits/sockaddr.h
+driftnet.o: /usr/include/asm/socket.h /usr/include/asm/sockios.h
+driftnet.o: /usr/include/bits/in.h /usr/include/bits/byteswap.h
+driftnet.o: /usr/include/arpa/inet.h /usr/include/netinet/in_systm.h
+driftnet.o: /usr/include/netinet/ip.h /usr/include/netinet/tcp.h
+driftnet.o: /usr/include/ctype.h /usr/include/fcntl.h
+driftnet.o: /usr/include/bits/fcntl.h /usr/include/pthread.h
+driftnet.o: /usr/include/sched.h /usr/include/bits/sched.h
+driftnet.o: /usr/include/signal.h /usr/include/bits/pthreadtypes.h
+driftnet.o: /usr/include/bits/sigthread.h /usr/include/stdlib.h
+driftnet.o: /usr/include/alloca.h /usr/include/string.h /usr/include/unistd.h
+driftnet.o: /usr/include/bits/posix_opt.h /usr/include/bits/confname.h
+driftnet.o: /usr/include/getopt.h /usr/include/sys/stat.h
+driftnet.o: /usr/include/bits/stat.h /usr/include/sys/wait.h
+driftnet.o: /usr/include/bits/waitflags.h /usr/include/bits/waitstatus.h
+driftnet.o: driftnet.h /usr/include/sys/socket.h
+image.o: /usr/include/stdio.h /usr/include/features.h
+image.o: /usr/include/sys/cdefs.h /usr/include/gnu/stubs.h
+image.o: /usr/lib/gcc-lib/i386-redhat-linux/egcs-2.91.66/include/stddef.h
+image.o: /usr/lib/gcc-lib/i386-redhat-linux/egcs-2.91.66/include/stdarg.h
+image.o: /usr/include/bits/types.h /usr/include/libio.h
+image.o: /usr/include/_G_config.h /usr/include/bits/stdio_lim.h
+image.o: /usr/include/stdlib.h /usr/include/alloca.h /usr/include/string.h
+display.o: /usr/include/gtk/gtk.h /usr/include/gdk/gdk.h
+display.o: /usr/include/gdk/gdktypes.h /usr/include/glib.h
+display.o: /usr/lib/glib/include/glibconfig.h /usr/include/limits.h
+display.o: /usr/include/features.h /usr/include/sys/cdefs.h
+display.o: /usr/include/gnu/stubs.h /usr/include/bits/posix1_lim.h
+display.o: /usr/include/bits/local_lim.h /usr/include/linux/limits.h
+display.o: /usr/include/bits/posix2_lim.h
+display.o: /usr/lib/gcc-lib/i386-redhat-linux/egcs-2.91.66/include/float.h
+display.o: /usr/lib/gcc-lib/i386-redhat-linux/egcs-2.91.66/include/stdarg.h
+display.o: /usr/include/gdk/gdkcursors.h /usr/include/gdk/gdkrgb.h
+display.o: /usr/include/gtk/gtkaccelgroup.h /usr/include/gtk/gtkobject.h
+display.o: /usr/include/gtk/gtkarg.h /usr/include/gtk/gtktypeutils.h
+display.o: /usr/include/gtk/gtktypebuiltins.h /usr/include/gtk/gtkenums.h
+display.o: /usr/include/gtk/gtkdebug.h /usr/include/gtk/gtkaccellabel.h
+display.o: /usr/include/gtk/gtklabel.h /usr/include/gtk/gtkmisc.h
+display.o: /usr/include/gtk/gtkwidget.h /usr/include/gtk/gtkadjustment.h
+display.o: /usr/include/gtk/gtkdata.h /usr/include/gtk/gtkstyle.h
+display.o: /usr/include/gtk/gtkalignment.h /usr/include/gtk/gtkbin.h
+display.o: /usr/include/gtk/gtkcontainer.h /usr/include/gtk/gtkaspectframe.h
+display.o: /usr/include/gtk/gtkframe.h /usr/include/gtk/gtkarrow.h
+display.o: /usr/include/gtk/gtkbindings.h /usr/include/gtk/gtkbox.h
+display.o: /usr/include/gtk/gtkbbox.h /usr/include/gtk/gtkbutton.h
+display.o: /usr/include/gtk/gtkcalendar.h /usr/include/gtk/gtksignal.h
+display.o: /usr/include/gtk/gtkmarshal.h /usr/include/gtk/gtkcheckbutton.h
+display.o: /usr/include/gtk/gtktogglebutton.h
+display.o: /usr/include/gtk/gtkcheckmenuitem.h /usr/include/gtk/gtkmenuitem.h
+display.o: /usr/include/gtk/gtkitem.h /usr/include/gtk/gtkclist.h
+display.o: /usr/include/gtk/gtkhscrollbar.h /usr/include/gtk/gtkscrollbar.h
+display.o: /usr/include/gtk/gtkrange.h /usr/include/gtk/gtkvscrollbar.h
+display.o: /usr/include/gtk/gtkcolorsel.h /usr/include/gtk/gtkwindow.h
+display.o: /usr/include/gtk/gtkvbox.h /usr/include/gtk/gtkpreview.h
+display.o: /usr/include/gtk/gtkentry.h /usr/include/gtk/gtkeditable.h
+display.o: /usr/include/gtk/gtkhbox.h /usr/include/gtk/gtkmain.h
+display.o: /usr/include/gtk/gtkscale.h /usr/include/gtk/gtkhscale.h
+display.o: /usr/include/gtk/gtktable.h /usr/include/gtk/gtkeventbox.h
+display.o: /usr/include/gtk/gtkcombo.h /usr/include/gtk/gtkcompat.h
+display.o: /usr/include/gtk/gtkctree.h /usr/include/gtk/gtkcurve.h
+display.o: /usr/include/gtk/gtkdrawingarea.h /usr/include/gtk/gtkdialog.h
+display.o: /usr/include/gtk/gtkdnd.h /usr/include/gtk/gtkselection.h
+display.o: /usr/include/gtk/gtkfeatures.h /usr/include/gtk/gtkfilesel.h
+display.o: /usr/include/gtk/gtkfixed.h /usr/include/gtk/gtkfontsel.h
+display.o: /usr/include/gtk/gtknotebook.h /usr/include/gtk/gtkgamma.h
+display.o: /usr/include/gtk/gtkgc.h /usr/include/gtk/gtkhandlebox.h
+display.o: /usr/include/gtk/gtkhbbox.h /usr/include/gtk/gtkhpaned.h
+display.o: /usr/include/gtk/gtkpaned.h /usr/include/gtk/gtkhruler.h
+display.o: /usr/include/gtk/gtkruler.h /usr/include/gtk/gtkhseparator.h
+display.o: /usr/include/gtk/gtkseparator.h /usr/include/gtk/gtkimage.h
+display.o: /usr/include/gtk/gtkinputdialog.h
+display.o: /usr/include/gtk/gtkitemfactory.h
+display.o: /usr/include/gtk/gtkmenufactory.h /usr/include/gtk/gtklayout.h
+display.o: /usr/include/gtk/gtklist.h /usr/include/gtk/gtklistitem.h
+display.o: /usr/include/gtk/gtkmenu.h /usr/include/gtk/gtkmenushell.h
+display.o: /usr/include/gtk/gtkmenubar.h /usr/include/gtk/gtkoptionmenu.h
+display.o: /usr/include/gtk/gtkpacker.h /usr/include/gtk/gtkpixmap.h
+display.o: /usr/include/gtk/gtkplug.h /usr/include/gtk/gtkprogress.h
+display.o: /usr/include/gtk/gtkprogressbar.h
+display.o: /usr/include/gtk/gtkradiobutton.h
+display.o: /usr/include/gtk/gtkradiomenuitem.h /usr/include/gtk/gtkrc.h
+display.o: /usr/include/gtk/gtkscrolledwindow.h
+display.o: /usr/include/gtk/gtkviewport.h /usr/include/gtk/gtksocket.h
+display.o: /usr/include/gtk/gtkspinbutton.h /usr/include/gtk/gtkstatusbar.h
+display.o: /usr/include/gtk/gtktearoffmenuitem.h /usr/include/gtk/gtktext.h
+display.o: /usr/include/gtk/gtkthemes.h /usr/include/gtk/gtktipsquery.h
+display.o: /usr/include/gtk/gtktoolbar.h /usr/include/gtk/gtktooltips.h
+display.o: /usr/include/gtk/gtktree.h /usr/include/gtk/gtktreeitem.h
+display.o: /usr/include/gtk/gtkvbbox.h /usr/include/gtk/gtkvpaned.h
+display.o: /usr/include/gtk/gtkvruler.h /usr/include/gtk/gtkvscale.h
+display.o: /usr/include/gtk/gtkvseparator.h /usr/include/gdk/gdkx.h
+display.o: /usr/include/gdk/gdkprivate.h /usr/X11R6/include/X11/Xlib.h
+display.o: /usr/include/sys/types.h /usr/include/bits/types.h
+display.o: /usr/lib/gcc-lib/i386-redhat-linux/egcs-2.91.66/include/stddef.h
+display.o: /usr/include/time.h /usr/include/endian.h
+display.o: /usr/include/bits/endian.h /usr/include/sys/select.h
+display.o: /usr/include/bits/select.h /usr/include/bits/sigset.h
+display.o: /usr/include/sys/sysmacros.h /usr/X11R6/include/X11/X.h
+display.o: /usr/X11R6/include/X11/Xfuncproto.h
+display.o: /usr/X11R6/include/X11/Xosdefs.h /usr/X11R6/include/X11/Xutil.h
+display.o: /usr/include/stdio.h /usr/include/libio.h /usr/include/_G_config.h
+display.o: /usr/include/bits/stdio_lim.h /usr/include/stdlib.h
+display.o: /usr/include/alloca.h /usr/include/unistd.h
+display.o: /usr/include/bits/posix_opt.h /usr/include/bits/confname.h
+display.o: /usr/include/getopt.h /usr/include/fcntl.h
+display.o: /usr/include/bits/fcntl.h /usr/include/string.h
+display.o: /usr/include/errno.h /usr/include/bits/errno.h
+display.o: /usr/include/linux/errno.h /usr/include/asm/errno.h
+display.o: /usr/include/sys/stat.h /usr/include/bits/stat.h driftnet.h
+display.o: /usr/include/sys/socket.h /usr/include/bits/socket.h
+display.o: /usr/include/bits/sockaddr.h /usr/include/asm/socket.h
+display.o: /usr/include/asm/sockios.h /usr/include/netinet/in.h
+display.o: /usr/include/stdint.h /usr/include/bits/wordsize.h
+display.o: /usr/include/bits/in.h /usr/include/bits/byteswap.h
+display.o: /usr/include/arpa/inet.h /usr/include/sys/time.h
+display.o: /usr/include/bits/time.h img.h
+playaudio.o: /usr/include/sys/types.h /usr/include/features.h
+playaudio.o: /usr/include/sys/cdefs.h /usr/include/gnu/stubs.h
+playaudio.o: /usr/include/bits/types.h
+playaudio.o: /usr/lib/gcc-lib/i386-redhat-linux/egcs-2.91.66/include/stddef.h
+playaudio.o: /usr/include/time.h /usr/include/endian.h
+playaudio.o: /usr/include/bits/endian.h /usr/include/sys/select.h
+playaudio.o: /usr/include/bits/select.h /usr/include/bits/sigset.h
+playaudio.o: /usr/include/sys/sysmacros.h /usr/include/errno.h
+playaudio.o: /usr/include/bits/errno.h /usr/include/linux/errno.h
+playaudio.o: /usr/include/asm/errno.h /usr/include/pthread.h
+playaudio.o: /usr/include/sched.h /usr/include/bits/sched.h
+playaudio.o: /usr/include/signal.h /usr/include/bits/pthreadtypes.h
+playaudio.o: /usr/include/bits/sigthread.h /usr/include/stdio.h
+playaudio.o: /usr/lib/gcc-lib/i386-redhat-linux/egcs-2.91.66/include/stdarg.h
+playaudio.o: /usr/include/libio.h /usr/include/_G_config.h
+playaudio.o: /usr/include/bits/stdio_lim.h /usr/include/stdlib.h
+playaudio.o: /usr/include/alloca.h /usr/include/string.h
+playaudio.o: /usr/include/unistd.h /usr/include/bits/posix_opt.h
+playaudio.o: /usr/include/bits/confname.h /usr/include/getopt.h
+playaudio.o: /usr/include/sys/wait.h /usr/include/bits/waitflags.h
+playaudio.o: /usr/include/bits/waitstatus.h driftnet.h
+playaudio.o: /usr/include/sys/socket.h /usr/include/bits/socket.h
+playaudio.o: /usr/include/limits.h /usr/include/bits/posix1_lim.h
+playaudio.o: /usr/include/bits/local_lim.h /usr/include/linux/limits.h
+playaudio.o: /usr/include/bits/posix2_lim.h /usr/include/bits/sockaddr.h
+playaudio.o: /usr/include/asm/socket.h /usr/include/asm/sockios.h
+playaudio.o: /usr/include/netinet/in.h /usr/include/stdint.h
+playaudio.o: /usr/include/bits/wordsize.h /usr/include/bits/in.h
+playaudio.o: /usr/include/bits/byteswap.h /usr/include/arpa/inet.h
+playaudio.o: /usr/include/sys/time.h /usr/include/bits/time.h
+connection.o: /usr/include/assert.h /usr/include/features.h
+connection.o: /usr/include/sys/cdefs.h /usr/include/gnu/stubs.h
+connection.o: /usr/include/stdio.h
+connection.o: /usr/lib/gcc-lib/i386-redhat-linux/egcs-2.91.66/include/stddef.h
+connection.o: /usr/lib/gcc-lib/i386-redhat-linux/egcs-2.91.66/include/stdarg.h
+connection.o: /usr/include/bits/types.h /usr/include/libio.h
+connection.o: /usr/include/_G_config.h /usr/include/bits/stdio_lim.h
+connection.o: /usr/include/stdlib.h /usr/include/alloca.h
+connection.o: /usr/include/string.h /usr/include/time.h driftnet.h
+connection.o: /usr/include/sys/types.h /usr/include/endian.h
+connection.o: /usr/include/bits/endian.h /usr/include/sys/select.h
+connection.o: /usr/include/bits/select.h /usr/include/bits/sigset.h
+connection.o: /usr/include/sys/sysmacros.h /usr/include/sys/socket.h
+connection.o: /usr/include/bits/socket.h /usr/include/limits.h
+connection.o: /usr/include/bits/posix1_lim.h /usr/include/bits/local_lim.h
+connection.o: /usr/include/linux/limits.h /usr/include/bits/posix2_lim.h
+connection.o: /usr/include/bits/sockaddr.h /usr/include/asm/socket.h
+connection.o: /usr/include/asm/sockios.h /usr/include/netinet/in.h
+connection.o: /usr/include/stdint.h /usr/include/bits/wordsize.h
+connection.o: /usr/include/bits/in.h /usr/include/bits/byteswap.h
+connection.o: /usr/include/arpa/inet.h /usr/include/sys/time.h
+connection.o: /usr/include/bits/time.h
+media.o: /usr/include/assert.h /usr/include/features.h
+media.o: /usr/include/sys/cdefs.h /usr/include/gnu/stubs.h
+media.o: /usr/include/dirent.h /usr/include/bits/types.h
+media.o: /usr/lib/gcc-lib/i386-redhat-linux/egcs-2.91.66/include/stddef.h
+media.o: /usr/include/bits/dirent.h /usr/include/bits/posix1_lim.h
+media.o: /usr/include/bits/local_lim.h /usr/include/linux/limits.h
+media.o: /usr/include/fcntl.h /usr/include/bits/fcntl.h
+media.o: /usr/include/sys/types.h /usr/include/time.h /usr/include/endian.h
+media.o: /usr/include/bits/endian.h /usr/include/sys/select.h
+media.o: /usr/include/bits/select.h /usr/include/bits/sigset.h
+media.o: /usr/include/sys/sysmacros.h /usr/include/stdio.h
+media.o: /usr/lib/gcc-lib/i386-redhat-linux/egcs-2.91.66/include/stdarg.h
+media.o: /usr/include/libio.h /usr/include/_G_config.h
+media.o: /usr/include/bits/stdio_lim.h /usr/include/stdlib.h
+media.o: /usr/include/alloca.h /usr/include/string.h /usr/include/unistd.h
+media.o: /usr/include/bits/posix_opt.h /usr/include/bits/confname.h
+media.o: /usr/include/getopt.h driftnet.h /usr/include/sys/socket.h
+media.o: /usr/include/bits/socket.h /usr/include/limits.h
+media.o: /usr/include/bits/posix2_lim.h /usr/include/bits/sockaddr.h
+media.o: /usr/include/asm/socket.h /usr/include/asm/sockios.h
+media.o: /usr/include/netinet/in.h /usr/include/stdint.h
+media.o: /usr/include/bits/wordsize.h /usr/include/bits/in.h
+media.o: /usr/include/bits/byteswap.h /usr/include/arpa/inet.h
+media.o: /usr/include/sys/time.h /usr/include/bits/time.h
