@@ -1,10 +1,13 @@
 Changelog for driftnet
-$Id: CHANGES,v 1.15 2002/07/09 17:30:52 chris Exp $
+$Id: CHANGES,v 1.17 2003/08/12 14:01:58 chris Exp $
 
 0.1.6
 
 Changed the algorithm used to search for image start blocks to Boyer-Moore, for
-a performance improvement.
+a performance improvement. Fixed some build errors.
+
+Added support for reading packets from a pcap dump file (thanks to Rob Timko
+and Joshua Wright for this).
 
 0.1.5
 
